--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde_json = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 
 # Database
-duckdb = "0.9"
+# duckdb = "0.10"  # Temporarily commented due to arrow-arith compilation issue
 
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
